perf: :sparkles: Evaluations done.
